refactor: Number 계층구조로 변경
- 계층 구조에 따라 객체 생성, 변환 역할 분리